[gd_scene load_steps=43 format=3 uid="uid://crvaw1bdwrnwx"]

[ext_resource type="Script" uid="uid://doll4v777v5ys" path="res://Scenes/multplayer_controller.gd" id="1_fbm17"]
[ext_resource type="PackedScene" uid="uid://c2w1myauyrkr7" path="res://Scenes/level_base.tscn" id="2_fbm17"]
[ext_resource type="PackedScene" uid="uid://b7xu4doi4n8h4" path="res://player.tscn" id="2_l6pj4"]
[ext_resource type="PackedScene" uid="uid://sdvkjmh51bqg" path="res://Scenes/pasteque.tscn" id="3_2ryth"]
[ext_resource type="PackedScene" uid="uid://b1xt0cug20dy7" path="res://ui_notif.tscn" id="3_6pwei"]
[ext_resource type="PackedScene" uid="uid://bihg75wr72a7k" path="res://challenge_manager.tscn" id="3_jyhx4"]
[ext_resource type="PackedScene" uid="uid://dgaabyyvjnbp8" path="res://Scenes/vitre.tscn" id="3_l6pj4"]
[ext_resource type="Texture2D" uid="uid://dwfic5mp75p1b" path="res://Textures/IP_Banner.png" id="3_xk0xp"]
[ext_resource type="FontFile" uid="uid://bttgq66wddl8h" path="res://GT-Maru-Medium-Trial.otf" id="4_cybxk"]
[ext_resource type="PackedScene" uid="uid://dbe5o1jd6qqm3" path="res://Scenes/plaque_pression.tscn" id="4_jyhx4"]
[ext_resource type="PackedScene" uid="uid://bvyfuyygx27e8" path="res://Scenes/Support_1.tscn" id="5_x6r4n"]
[ext_resource type="PackedScene" uid="uid://baa7hs3cq2wn3" path="res://Scenes/Casier.tscn" id="7_gvlqo"]
[ext_resource type="PackedScene" uid="uid://bpvqwnh5rjub8" path="res://Scenes/Levier.tscn" id="8_vt6um"]
[ext_resource type="Script" path="res://Scenes/alarm_manager.gd" id="9_ktlin"]
[ext_resource type="PackedScene" uid="uid://7425d6q18tcs" path="res://Scenes/Alarme.tscn" id="9_on4sc"]
[ext_resource type="PackedScene" uid="uid://dige7ov43phka" path="res://Scenes/Chauderon.tscn" id="10_yboly"]
[ext_resource type="PackedScene" uid="uid://duys8ttyui6es" path="res://Scenes/bouton_bleu.tscn" id="11_rkg6e"]
[ext_resource type="PackedScene" uid="uid://bu3ip0kio7dka" path="res://Scenes/main_ui.tscn" id="19_2qjws"]
[ext_resource type="PackedScene" uid="uid://c14qob8p1iwj4" path="res://Scenes/bouton_jaune.tscn" id="20_3656k"]
[ext_resource type="PackedScene" uid="uid://c04a34ghpnpb7" path="res://Scenes/bouton_rouge.tscn" id="20_cbh4w"]
[ext_resource type="PackedScene" uid="uid://bcefawil7o070" path="res://Scenes/StartMenu_UI.tscn" id="20_gs3d0"]
[ext_resource type="PackedScene" uid="uid://doac725qiu2t3" path="res://Scenes/bouton_vert.tscn" id="21_xo33y"]
[ext_resource type="PackedScene" path="res://Scenes/sound_manager.tscn" id="22_fvls2"]
[ext_resource type="Texture2D" uid="uid://ce5bi2mq2jued" path="res://Textures/Enter.png" id="24_cybxk"]
[ext_resource type="Texture2D" uid="uid://h1ndq8lcfi74" path="res://Textures/connect.png" id="25_8bv7e"]
[ext_resource type="Texture2D" uid="uid://c2svdsj1i2bo6" path="res://Textures/connect2.png" id="26_6pwei"]
[ext_resource type="PackedScene" uid="uid://d1o6jpckrouff" path="res://Scenes/tapis_roulant.tscn" id="32_q70v4"]
[ext_resource type="PackedScene" uid="uid://c4sglkguxh4ah" path="res://Scenes/porte.tscn" id="33_72m11"]
[ext_resource type="PackedScene" path="res://Scenes/bucket.tscn" id="42_457c2"]
[ext_resource type="PackedScene" uid="uid://bfoasbx47yc0b" path="res://Scenes/pizza_new.tscn" id="43_2qjws"]
[ext_resource type="PackedScene" path="res://Scenes/screw.tscn" id="44_3656k"]
[ext_resource type="PackedScene" uid="uid://d13o8lmc5tq0p" path="res://Scenes/support_2.tscn" id="49_xo33y"]
[ext_resource type="PackedScene" uid="uid://v7c0gin77qlp" path="res://Scenes/Levier2.tscn" id="56_d7hbc"]

[sub_resource type="Environment" id="Environment_qehu7"]
background_mode = 1
background_color = Color(0.0565378, 0.0905886, 0.195398, 1)
ambient_light_source = 2
ambient_light_color = Color(0.785402, 0.574108, 0.662434, 1)
ambient_light_energy = 2.65
tonemap_exposure = 0.93
ssao_radius = 0.01
ssao_intensity = 3.22
ssao_horizon = 0.0
ssao_sharpness = 1.0
glow_enabled = true
glow_intensity = 0.77
glow_hdr_threshold = 4.0
glow_hdr_scale = 1.34
glow_hdr_luminance_cap = 88.69
fog_light_color = Color(0.754621, 0.655637, 0.390674, 1)
fog_light_energy = 0.05
fog_density = 0.0055
fog_height = 74.64
volumetric_fog_enabled = true
volumetric_fog_density = 0.379
adjustment_enabled = true
adjustment_brightness = 0.96
adjustment_contrast = 1.12
adjustment_saturation = 1.28

[sub_resource type="PlaneMesh" id="PlaneMesh_iu0du"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jyhx4"]
radius = 0.493351

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_fvls2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cbh4w"]
size = Vector3(38.932, 8.46594, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_3656k"]
size = Vector3(56.2403, 1, 19.0483)

[sub_resource type="BoxShape3D" id="BoxShape3D_457c2"]
size = Vector3(43.9083, 1, 16.9642)

[sub_resource type="BoxShape3D" id="BoxShape3D_2qjws"]
size = Vector3(52.1654, 1, 9.95581)

[sub_resource type="BoxShape3D" id="BoxShape3D_2ryth"]
size = Vector3(4.84473, 0.344116, 1.44043)

[node name="Level_LAB" type="Node3D" node_paths=PackedStringArray("recipe_manager", "challenge_manager", "IpUI", "IpLineEdit")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_fbm17")
player_scene = ExtResource("2_l6pj4")
recipe_manager = NodePath("ChallengeManager/RecipeManager")
challenge_manager = NodePath("ChallengeManager")
IpUI = NodePath("StartMenuUI/IP")
IpLineEdit = NodePath("StartMenuUI/IP/LineEdit")

[node name="UI_Notif" parent="." instance=ExtResource("3_6pwei")]

[node name="ServerUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ServerUI"]
layout_mode = 0
offset_left = 649.0
offset_top = 36.0
offset_right = 1287.0
offset_bottom = 154.0
texture = ExtResource("3_xk0xp")

[node name="Label" type="Label" parent="ServerUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -260.0
offset_top = 62.0
offset_right = 260.0
offset_bottom = 128.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("4_cybxk")
theme_override_font_sizes/font_size = 58
text = "IP:"

[node name="Main_ui" parent="." instance=ExtResource("19_2qjws")]

[node name="LookingUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="LookingUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Label" type="Label" parent="LookingUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Looking for a server to connect to ..."

[node name="ChallengeManager" parent="." instance=ExtResource("3_jyhx4")]

[node name="Items" type="Node3D" parent="ChallengeManager/RecipeManager" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Bucket" parent="ChallengeManager/RecipeManager/Items" instance=ExtResource("42_457c2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.26414e-07, 1.02026, -5.17975)

[node name="Pizza" parent="ChallengeManager/RecipeManager/Items" instance=ExtResource("43_2qjws")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.28027, 0, -18.6203)

[node name="Screw2" parent="ChallengeManager/RecipeManager/Items" instance=ExtResource("44_3656k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.91347e-07, 0, -11.2407)

[node name="Pasteque" parent="ChallengeManager/RecipeManager/Items" instance=ExtResource("3_2ryth")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.66162, 0, -10.2113)
collision_layer = 1

[node name="Items2" type="Node3D" parent="ChallengeManager/RecipeManager" index="1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 22.293, 0, 0)

[node name="Bucket" parent="ChallengeManager/RecipeManager/Items2" instance=ExtResource("42_457c2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0251, 1.02026, -5.17975)

[node name="Pizza" parent="ChallengeManager/RecipeManager/Items2" instance=ExtResource("43_2qjws")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.83079, 0, -18.6203)

[node name="Screw2" parent="ChallengeManager/RecipeManager/Items2" instance=ExtResource("44_3656k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.97326, 0, -3.71026)

[node name="Pasteque" parent="ChallengeManager/RecipeManager/Items2" instance=ExtResource("3_2ryth")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.2781, 0, -14.02)
collision_layer = 1

[node name="AlarmManager" type="Node" parent="ChallengeManager" node_paths=PackedStringArray("animation_trees", "camera")]
script = ExtResource("9_ktlin")
animation_trees = [NodePath("Alarme2/AnimationTree"), NodePath("Alarme5/AnimationTree"), NodePath("Alarme3/AnimationTree"), NodePath("Alarme4/AnimationTree")]
camera = NodePath("../../Camera3D")

[node name="Alarme2" parent="ChallengeManager/AlarmManager" instance=ExtResource("9_on4sc")]
transform = Transform3D(12, 0, -1.7053e-13, 0, 12, 0, 1.7053e-13, 0, 12, -25.1938, 7.65303, 5.39238)

[node name="Gradient" parent="ChallengeManager/AlarmManager/Alarme2" index="3"]
transform = Transform3D(0.653808, -0.1404, 0.0154929, 0.92462, 0.198556, -9.78596e-08, -0.653802, 0.140401, 0.0154929, 0.078, 0, 0)

[node name="Alarme5" parent="ChallengeManager/AlarmManager" instance=ExtResource("9_on4sc")]
transform = Transform3D(-12, 0, -1.04907e-06, 0, 12, 0, 1.04907e-06, 0, -12, 25.3156, 7.65303, 5.39238)

[node name="Gradient" parent="ChallengeManager/AlarmManager/Alarme5" index="3"]
transform = Transform3D(0.653808, -0.1404, 0.0154929, 0.92462, 0.198556, -9.78596e-08, -0.653802, 0.140401, 0.0154929, 0.078, 0, 0)

[node name="Alarme3" parent="ChallengeManager/AlarmManager" instance=ExtResource("9_on4sc")]
transform = Transform3D(1.57361e-06, 0, -12, 0, 12, 0, 12, 0, 1.57361e-06, -8.14438, 7.65303, -18.8651)

[node name="Gradient" parent="ChallengeManager/AlarmManager/Alarme3" index="3"]
transform = Transform3D(0.653808, -0.1404, 0.0154929, 0.92462, 0.198556, -9.78596e-08, -0.653802, 0.140401, 0.0154929, 0.078, 0, 0)

[node name="Alarme4" parent="ChallengeManager/AlarmManager" instance=ExtResource("9_on4sc")]
transform = Transform3D(1.57361e-06, 0, -12, 0, 12, 0, 12, 0, 1.57361e-06, 7.99858, 7.65303, -18.8651)

[node name="Gradient" parent="ChallengeManager/AlarmManager/Alarme4" index="3"]
transform = Transform3D(0.653808, -0.1404, 0.0154929, 0.92462, 0.198556, -9.78596e-08, -0.653802, 0.140401, 0.0154929, 0.078, 0, 0)

[node name="Overlay" type="Control" parent="ChallengeManager/AlarmManager"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RedOverlay" type="ColorRect" parent="ChallengeManager/AlarmManager/Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.823529, 0.196078, 0.25098, 0)

[node name="GreenOverlay" type="ColorRect" parent="ChallengeManager/AlarmManager/Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.568627, 0.2, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(8.9417e-09, 0.916761, -0.399437, 2.29412e-08, 0.399437, 0.916761, 1, -1.7361e-08, -1.746e-08, -18.239, 43.142, 0)
environment = SubResource("Environment_qehu7")
fov = 51.2
near = 0.038

[node name="LevelBase" parent="." instance=ExtResource("2_fbm17")]
transform = Transform3D(1.43099e-07, 0, -12, 0, 12, 0, 12, 0, 1.43099e-07, 0, -1.82186, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.878817, 0.477159, 0, 0.477159, 0.878817, -1, 3.84143e-08, -2.08573e-08, 0, 9.6028, 0)
light_energy = 1.075
light_indirect_energy = 3.038
light_volumetric_fog_energy = 0.0
light_angular_distance = 15.28
light_specular = 1.604
shadow_enabled = true
shadow_bias = 10.0
shadow_normal_bias = 4.264
shadow_reverse_cull_face = true
shadow_opacity = 0.66

[node name="Vitre" parent="." instance=ExtResource("3_l6pj4")]
transform = Transform3D(-5.24537e-07, 0, 12, 0, 12, 0, -12, 0, -5.24537e-07, 0, -1.63009, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(18.155, 0, 0, 0, 18.155, 0, 0, 0, 18.155, 0, -2.48838, 0)
mesh = SubResource("PlaneMesh_iu0du")

[node name="Plaque_Pression2" parent="." instance=ExtResource("4_jyhx4")]
transform = Transform3D(12, 0, 0, 0, 12, 0, 0, 0, 12, -9.88725, -1.68862, -18.0945)

[node name="Plaque_Pression3" parent="." instance=ExtResource("4_jyhx4")]
transform = Transform3D(12, 0, 0, 0, 12, 0, 0, 0, 12, 11.733, -1.68862, -9.29976)

[node name="Plaque_Pression4" parent="." instance=ExtResource("4_jyhx4")]
transform = Transform3D(12, 0, 0, 0, 12, 0, 0, 0, 12, -16.0453, -1.68862, 4.49003)

[node name="Plaque_Pression5" parent="." instance=ExtResource("4_jyhx4")]
transform = Transform3D(12, 0, 0, 0, 12, 0, 0, 0, 12, 10.6545, -1.68862, 20.5528)

[node name="Casier" parent="." instance=ExtResource("7_gvlqo")]
transform = Transform3D(-5.24537e-07, 0, -12, 0, 12, 0, 12, 0, -5.24537e-07, -15.613, -1.90931, -24.4146)

[node name="Casier8" parent="." instance=ExtResource("7_gvlqo")]
transform = Transform3D(-12, 0, -1.04907e-06, 0, 12, 0, 1.04907e-06, 0, -12, 18.2187, -1.90931, -20.4936)

[node name="Casier9" parent="." instance=ExtResource("7_gvlqo")]
transform = Transform3D(-12, 0, -1.04907e-06, 0, 12, 0, 1.04907e-06, 0, -12, 18.2187, -1.90931, -23.2075)

[node name="Casier2" parent="." instance=ExtResource("7_gvlqo")]
transform = Transform3D(-5.24537e-07, 0, -12, 0, 12, 0, 12, 0, -5.24537e-07, -12.8929, -1.90931, -24.443)

[node name="Casier3" parent="." instance=ExtResource("7_gvlqo")]
transform = Transform3D(-5.24537e-07, 0, -12, 0, 12, 0, 12, 0, -5.24537e-07, -10.1404, -1.86225, -24.3402)

[node name="Casier4" parent="." instance=ExtResource("7_gvlqo")]
transform = Transform3D(-5.24537e-07, 0, 12, 0, 12, 0, -12, 0, -5.24537e-07, 12.2998, -1.90931, 24.4842)

[node name="Casier5" parent="." instance=ExtResource("7_gvlqo")]
transform = Transform3D(-5.24537e-07, 0, 12, 0, 12, 0, -12, 0, -5.24537e-07, 9.48881, -1.86225, 24.3786)

[node name="Casier6" parent="." instance=ExtResource("7_gvlqo")]
transform = Transform3D(-5.24537e-07, 0, 12, 0, 12, 0, -12, 0, -5.24537e-07, -6.28002, -1.86225, 24.3786)

[node name="Levier5" parent="." instance=ExtResource("8_vt6um")]
transform = Transform3D(2.29282e-14, 5.24537e-07, -12, 12, -5.24537e-07, 0, -5.24537e-07, -12, -5.24537e-07, -13.6178, -1.86784, -14.7303)

[node name="Levier2" parent="." instance=ExtResource("8_vt6um")]
transform = Transform3D(-12, 0, -1.04907e-06, 0, 12, 0, 1.04907e-06, 0, -12, 18.8909, 2.46505, 17.5895)

[node name="Chauderon" parent="." instance=ExtResource("10_yboly")]
transform = Transform3D(12, 0, 0, 0, 12, 0, 0, 0, 12, 13.3526, -1.83192, -18.8701)

[node name="Area3D" type="Area3D" parent="Chauderon" groups=["cauldron"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Chauderon/Area3D"]
shape = SubResource("SphereShape3D_jyhx4")

[node name="Chauderon2" parent="." instance=ExtResource("10_yboly")]
transform = Transform3D(12, 0, 0, 0, 12, 0, 0, 0, 12, -12.8836, -1.83192, 12.0151)

[node name="Area3D" type="Area3D" parent="Chauderon2" groups=["cauldron"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Chauderon2/Area3D"]
shape = SubResource("SphereShape3D_jyhx4")

[node name="BlueButton" parent="." instance=ExtResource("11_rkg6e")]
transform = Transform3D(12, -1.54969e-07, -3.72235e-07, 3.72235e-07, 8.51573, 8.45472, 1.54969e-07, -8.45472, 8.51573, -11.5349, 1.36603, -3.91895)

[node name="Bouton2" parent="." instance=ExtResource("20_cbh4w")]
transform = Transform3D(12, 0, 0, 0, -5.24537e-07, 12, 0, -12, -5.24537e-07, 1.94259, 0.868449, 25.3689)

[node name="Bouton3" parent="." instance=ExtResource("20_cbh4w")]
transform = Transform3D(-12, 1.04907e-06, 4.58565e-14, 0, -5.24537e-07, 12, 1.04907e-06, 12, 5.24537e-07, -4.59234, 1.42232, -25.2866)

[node name="BoutonV" parent="." instance=ExtResource("21_xo33y")]
transform = Transform3D(12, 0, 0, 0, -5.24537e-07, 12, 0, -12, -5.24537e-07, -12.9339, 0.868449, 25.3689)

[node name="BoutonV3" parent="." instance=ExtResource("21_xo33y")]
transform = Transform3D(-11.9998, 1.04586e-06, 0.0726751, 0.0726751, -5.34058e-07, 11.9998, 1.04908e-06, 12, 5.27714e-07, 5.44656, 1.56685, -25.2955)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://b7xu4doi4n8h4")
spawn_path = NodePath("..")

[node name="StartMenuUI" parent="." instance=ExtResource("20_gs3d0")]

[node name="IP" type="Control" parent="StartMenuUI"]
visible = false
anchors_preset = 0
offset_left = 547.0
offset_top = 907.0
offset_right = 1105.0
offset_bottom = 1004.0

[node name="TextureRect" type="TextureRect" parent="StartMenuUI/IP"]
layout_mode = 0
offset_left = 16.0
offset_top = -57.0
offset_right = 718.0
offset_bottom = 153.0
texture = ExtResource("24_cybxk")
stretch_mode = 4

[node name="LineEdit" type="LineEdit" parent="StartMenuUI/IP"]
layout_mode = 0
offset_left = 90.0
offset_top = 20.0
offset_right = 485.0
offset_bottom = 75.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("4_cybxk")
theme_override_font_sizes/font_size = 40
clear_button_enabled = true
flat = true

[node name="Label" type="Label" parent="StartMenuUI/IP"]
layout_mode = 0
offset_left = -32.0
offset_top = 21.0
offset_right = 45.0
offset_bottom = 88.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("4_cybxk")
theme_override_font_sizes/font_size = 48
text = "IP: "

[node name="ip_button" type="Button" parent="StartMenuUI/IP"]
visible = false
layout_mode = 0
offset_left = 526.0
offset_top = 6.0
offset_right = 827.0
offset_bottom = 89.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_cybxk")
theme_override_font_sizes/font_size = 21
text = "CONNECT"
icon = ExtResource("25_8bv7e")
flat = true

[node name="TextureButton" type="TextureButton" parent="StartMenuUI/IP"]
layout_mode = 0
offset_left = 528.0
offset_top = 13.0
offset_right = 722.0
offset_bottom = 91.0
texture_normal = ExtResource("26_6pwei")
texture_pressed = ExtResource("25_8bv7e")
texture_hover = ExtResource("25_8bv7e")
texture_disabled = ExtResource("26_6pwei")
texture_focused = ExtResource("25_8bv7e")

[node name="Ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(18.9402, 0, 0, 0, 18.9402, 0, 0, 0, 18.9402, -0.658929, -1.13433, -0.279673)
shape = SubResource("WorldBoundaryShape3D_fvls2")

[node name="MiddleWall" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MiddleWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0480804, 3.73297, -9.54792e-15)
shape = SubResource("BoxShape3D_cbh4w")

[node name="Ground2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1.1028e-06, 0, -25.229)
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground2"]
transform = Transform3D(1, 0, 0, 0, 1, -8.35188e-23, 0, -8.35188e-23, 1, -3.14453, 0, -3.6335)
shape = SubResource("BoxShape3D_3656k")

[node name="Ground3" type="StaticBody3D" parent="."]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, -1.1043e-06, 0, 25.2635)
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground3"]
transform = Transform3D(1, -2.47274e-12, 2.6513e-19, 2.47274e-12, 1, -1.144e-12, -2.65127e-19, 1.144e-12, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_457c2")

[node name="Ground4" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 18.8902, 0, 0.0242547)
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground4"]
transform = Transform3D(1, 0, 1.29596e-19, 0, 1, 3.55271e-15, 0, -3.55271e-15, 1, -0.551167, -1.90735e-06, -4.47791)
shape = SubResource("BoxShape3D_2qjws")

[node name="Ground5" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -16.1675, 0, -0.0920608)
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground5"]
transform = Transform3D(12.401, -1.13687e-13, 2.57837e-18, 1.13687e-13, 12.401, 1.13687e-13, 1.32137e-19, -1.13687e-13, 12.401, -0.753274, -4.06681, -2.73089)
shape = SubResource("BoxShape3D_2ryth")

[node name="SoundManager" parent="." instance=ExtResource("22_fvls2")]

[node name="Support3" parent="." instance=ExtResource("49_xo33y")]
transform = Transform3D(-0.058433, 0, 11.9999, 0, 12, 0, -11.9999, 0, -0.058433, -2.66828, -1.90174, 16.4939)

[node name="Support5" parent="." instance=ExtResource("49_xo33y")]
transform = Transform3D(-0.058433, 0, 11.9999, 0, 12, 0, -11.9999, 0, -0.058433, -11.532, -1.90174, -3.51262)

[node name="Support" parent="." instance=ExtResource("5_x6r4n")]
transform = Transform3D(-5.24537e-07, 0, -12, 0, 12, 0, 12, 0, -5.24537e-07, 6.83518, -1.80046, 9.79652)

[node name="YellowButton" parent="Support" instance=ExtResource("20_3656k")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.000295639, 0.188573, 0.00657427)

[node name="Support4" parent="." instance=ExtResource("5_x6r4n")]
transform = Transform3D(-5.24537e-07, 0, -12, 0, 12, 0, 12, 0, -5.24537e-07, 1.90229, -1.80046, -13.4974)

[node name="YellowButton" parent="Support4" instance=ExtResource("20_3656k")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.000295639, 0.188573, 0.00657427)

[node name="Levier" parent="." instance=ExtResource("56_d7hbc")]
transform = Transform3D(-12, 0, 1.81195e-06, 0, 12, 0, -1.81195e-06, 0, -12, 18.8592, 1.6853, -5.70549)

[node name="Levier6" parent="." instance=ExtResource("56_d7hbc")]
transform = Transform3D(-5.22706e-07, -2.89427e-07, 9.10105, 6.62132, 6.24398, 5.78854e-07, -6.24398, 6.62132, -1.48046e-07, -2.37854, 1.65569, 16.1682)

[node name="Bouton" parent="." instance=ExtResource("11_rkg6e")]
transform = Transform3D(-5.24537e-07, -12, -5.24537e-07, 4.58565e-14, 5.24537e-07, -12, 12, -5.24537e-07, 2.29282e-14, 18.9753, 2.40254, 7.47906)

[node name="TapisRoulant" parent="." instance=ExtResource("32_q70v4")]
transform = Transform3D(-8.39823e-07, 0, -19.2129, 0, 13.5485, 0, 19.2129, 0, -8.39823e-07, 15.7033, -1.07537, 0.105638)

[node name="TapisRoulant2" parent="." instance=ExtResource("32_q70v4")]
transform = Transform3D(-8.39823e-07, 0, 19.2129, 0, 13.5485, 0, -19.2129, 0, -8.39823e-07, -15.771, -1.07537, -6.89375e-07)

[node name="Porte" parent="." instance=ExtResource("33_72m11")]
transform = Transform3D(-5.24537e-07, 0, -12, 0, 12.7793, 0, 12, 0, -5.24537e-07, 18.8927, -2.20889, -10.978)

[node name="Porte2" parent="." instance=ExtResource("33_72m11")]
transform = Transform3D(-5.24537e-07, 0, -12, 0, 12.7793, 0, 12, 0, -5.24537e-07, 18.8927, -2.20889, 11.0308)

[connection signal="pressed" from="StartMenuUI/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="StartMenuUI/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="StartMenuUI/IP/ip_button" to="." method="_on_ip_button_pressed"]

[editable path="ChallengeManager"]
[editable path="ChallengeManager/AlarmManager/Alarme2"]
[editable path="ChallengeManager/AlarmManager/Alarme5"]
[editable path="ChallengeManager/AlarmManager/Alarme3"]
[editable path="ChallengeManager/AlarmManager/Alarme4"]
[editable path="Chauderon"]
[editable path="Chauderon2"]
[editable path="StartMenuUI"]
